--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-Me">Me </li>
-              <li data-filter=".filter-Brother">Meme</li>
-              <li data-filter=".filter-Hiking">Random</li>
+              <li data-filter=".filter-Meme">Meme</li>
+              <li data-filter=".filter-Random">Random</li>
             </ul>
           </div>
         </div>
