--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@
       <p>Thanks</p>
      <div class="social-links">
 
-        <a href="https://www.facebook.com/profile.php?id=100081762045650&mibextid=ZbWKwL" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.facebook.com/zainal.alhabi.7587" class="facebook"><i class="bx bxl-facebook"></i></a>
 
-        <a href="https://www.instagram.com/zar_aidil?igsh=dWE2c2gyZHQ3Y2x6" class="instagram"><i class="bx bxl-instagram"></i></a> 
-        <a href="https://pin.it/5E5S6Uqta" class="pinterest"><i class="bx bxl-pinterest"></i></a>
-            <a href="https://wa.me/6285574670796" class="whatsapp"><i class="bx bxl-whatsapp"></i></a> 
+        <a href="https://www.instagram.com/jjain_al/" class="instagram"><i class="bx bxl-instagram"></i></a> 
+        <a href="https://id.pinterest.com/hxlzirdotxto/" class="pinterest"><i class="bx bxl-pinterest"></i></a>
+            <a href="https://wa.me/qr/5765TCX7N7RIC1" class="whatsapp"><i class="bx bxl-whatsapp"></i></a> 
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>JaiNetwork</span></strong> Yooru
